HTML_기본html구조/텍스트관련태그

--- a/01_html/index.html
+++ b/01_html/index.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
 <html></html>
     <head>
+        <!-- head 페이지에 노출되지 않는 설정 정보-->
         <meta charset="uft-8">
-        <title>HTML</title>
+        <title>😊❤️HTML</title>
     </head>
     <body>
         <h1>HTML</h1>
+        <!-- 
+            index.html은 랜딩페이지로써, 특정폴더 가장 하위에 
+        파일이름이 지정되지 않는 경우응답하는 파일
+        -->
+        <!--
+            hyper text 다른 페이지를 향한 링크가 걸린 텍스트
+            - 상대경로 : 현재페이지 기준으로 경로탐색
+                - ./ 현재폴더(생략가능)
+                - ../ 부모폴더
+            - 절대경로 :
+                - /로 시작
+                - http:// 로 시작하는 url
+        -->
+        <a href="foo.html">foo</a>
+
+        <a href="../02_css/bar.html">bar</a> 
+        <a href="/02_css/bar.html">bar</a> <!--절대경로-->
+        <a href="http://192.168.20.137:5500/02_css/bar.html">bar</a> <!--절대경로-->
+
     </body>
 </html>
