2023-11-14(HTML 2일차 수업)

--- a/01_html/01_text.html
+++ b/01_html/01_text.html
@@ -35,6 +35,20 @@
         날씨가 춥죠?<br/>
     </p>
 
+    <!-- pre-formatted 개행/탭/공백 표현가능 -->
+    <pre style="font-family: 'Courier New', Courier, monospaceS;">
+        안녕하세요,
+        날씨가 춥죠?
+    </pre>
+    <!-- pre>code -->
+    <pre>
+        <code>
+            function foo() {
+                conosole.log('foo');
+            }
+        </code>
+    </pre>
+
     <!--특수문자 표현 & 문자-->
     <!--http://kor.pe.kr/util/4/charmap2.htm-->
     <p>
