2023-11-15수업내용 [CSS_선택자/우선순위/font/정렬/text/박스모델/border/display]

--- a/homework/종합실습문제.html
+++ b/homework/종합실습문제.html
@@ -66,6 +66,8 @@
     <input type="text" id="guitar" name="guitar" size="25">
     
     </fieldset>
-
+    <div>
+      <input type="button" value="send message">
+    </div>
   </body>
 </html>
